# NS_VAD-CARLA2026

./: .gitattributes  .gitignore  README.md  agent.py  pyproject.toml
agent/: __init__.py  __main__.py
agent/common/: __init__.py  text.py
agent/logging/: __init__.py  events.py
agent/model/: __init__.py  predicates.py  types.py
agent/reasoning/: __init__.py  config.py  line_reader.py  process.py  reasoner.py  serialization.py  source_socket.py  state.py
agent/reasoning/resources/dp-sr/: README.md
agent/runtime/: __init__.py  application.py  cli.py
agent/vision/: __init__.py  perception.py
agent/vlm/: __init__.py  config.py  factory.py  models.py  protocols.py  service.py
agent/vlm/backends/: __init__.py  disabled.py  gemini.py  gemini_payload.py
agent/vlm/media/: __init__.py  extractor.py  saver.py  writer.py
docs/: predicates.md
docs/examples/jaywalking/: rules.lp
docs/examples/u_turn/: rules.lp
docs/examples/wrong_way/: areas.json  rules.lp
tests/: test_anomaly_viewer.py  test_dp_sr_components.py  test_vlm_classifier_factory.py  test_vlm_clip_extractor.py  test_vlm_config.py  test_vlm_input_saver.py  test_vlm_service.py
tools/: README.md  anomaly_viewer.py  define_areas.py
