[project]
name = "neuro-symbolic-vad"
version = "0.1.0"
description = "Neuro-Symbolic Agent for Video Anomaly Detection"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "google-genai",
  "lap>=0.5.12",
  "opencv-python==4.11.0.86",
  "rich",
  "shapely==2.0.7",
  "ultralytics==8.4.14",
]

[project.optional-dependencies]
cpu = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
]

cuda = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cuda" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "cuda" },
]
torchaudio = [
  { index = "pytorch-cu126", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
